# xiaojianc

./: .gitignore  .size-limit.json  .vsconfig  AGENTS.md  Cargo.toml  DESIGN.md  _tmp_pexpect_test.py  _tmp_pty_test.py  biome.json  code_agent.md  deny.toml  eslint.config.mjs  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-tree.txt  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts  welcome.html  wry-visual-hosting.patch  y.md  依赖.md  改造计划.md
agent-sidecar/: package.json
agent-sidecar/src/: server.spec.ts  server.ts
docs/: audit-events.md  env-vars.md  observability.md  tech-debt.md
docs/adr/: 006-cli-for-commit-stage-discard.md
docs/architecture/: ADR-20260422-window-resize-tearing.md  ADR-20260429-agent-plan-mode-web-search.md  ADR-20260506-wsl-link-vsock-grpc-quic.md  ADR-20260520-aed-edit-patch-diff-terminology.md  ADR-20260520-aed-ownership.md  ADR-20260520-mcp-hooks-and-capability.md  README.md
docs/guides/: agent-plan-mode-phase0-1.md
e2e/: ai-edit-rollback.spec.ts  startup-flow.spec.ts
resources/: Messages_zh.json
scripts/: build-wsl-link-agent.mjs  gen-tools.mjs  generate-shell-command-catalog.mjs  run-tauri.mjs
src/: App.spec.ts  App.vue  main.ts  shims-icons.d.ts  styles.css  welcome.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: ai-mcp.json  ai.json  default.json  git.json  terminal.json  window.json  wsl-link.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  tauri_bindings.rs
src-tauri/src/agent_sidecar/: mod.rs
src-tauri/src/ai/: audit.rs  credential.rs  favicon.rs  gateway.rs  mod.rs  network_permission.rs  openai_compatible.rs  provider.rs  redaction.rs  stream_manager.rs
src-tauri/src/ai/agent/: mod.rs  planner.rs
src-tauri/src/ai/approval/: decision.rs  mod.rs
src-tauri/src/ai/budget/: mod.rs
src-tauri/src/ai/credential/: mod.rs
src-tauri/src/ai/edit/: atomic_write.rs  auto_apply.rs  diff_render.rs  edit_journal.rs  errors.rs  file_transaction.rs  mod.rs  patch.rs  path_security.rs  pins.rs  protected_paths.rs  revert.rs  snapshot.rs  storage_lock.rs  timeline.rs
src-tauri/src/ai/edit/apply/: auto_apply.rs  diff_render.rs
src-tauri/src/ai/edit/history/: pins.rs  revert.rs  snapshot.rs
src-tauri/src/ai/edit/io/: file_transaction.rs
src-tauri/src/ai/edit/security/: path_security.rs
src-tauri/src/ai/gateway/: config.rs  connection.rs  conversation.rs  mod.rs  narrator.rs  suggestions.rs  tests.rs
src-tauri/src/ai/provider/: mod.rs
src-tauri/src/ai/security/: network_permission.rs  redaction.rs
src-tauri/src/ai/transport/: sse.rs
src-tauri/src/ai_agent/: mod.rs  planner.rs  policy.rs  provider_loop.rs  runtime.rs  tool_call.rs  tool_loop.rs
src-tauri/src/ai_edit/: auto_apply.rs  diff_render.rs  edit_journal.rs  errors.rs  mod.rs  protected_paths.rs  revert.rs  snapshot.rs
src-tauri/src/ai_index/: mod.rs
src-tauri/src/ai_patch/: mod.rs
src-tauri/src/ai_security/: command_classifier.rs  destructive_patterns.rs  mod.rs
src-tauri/src/ai_tools/: mod.rs  registry.rs  web_fetch.rs  web_search.rs
src-tauri/src/approval_engine/: journal.rs  mod.rs  policy.rs
src-tauri/src/commands/: agent_sidecar.rs  ai.rs  contracts.rs  git.rs  lsp.rs  mod.rs  script_run.rs  search.rs  shell_tools.rs  ssh.rs  ssh_pool.rs  terminal.rs  window.rs  window_stage.rs  workspace_fs.rs  workspace_watcher.rs  wsl_link.rs
src-tauri/src/commands/ai/: agent.rs  edit.rs  gateway.rs  mod.rs  storage.rs  tools.rs  tools_generated.rs
src-tauri/src/commands/git/: branches.rs  cli.rs  diff.rs  history.rs  pull_request.rs  stash.rs  status.rs  tests.rs
src-tauri/src/terminal/: ansi.rs  interactive_pty.rs  mod.rs  pty.rs  registry.rs  run_supervisor.rs  snapshot.rs  utf8_decoder.rs  visual.rs  vte_detect.rs  wsl.rs
src-tauri/src/terminal/run_supervisor/: output_filter.rs  wsl_resize.rs
src-tauri/src/wsl_link/: MATURITY.md  adapters.rs  agent.rs  agent_distribution.rs  agent_install.rs  agent_runtime.rs  circuit_breaker.rs  config.rs  grpc_transport.rs  manager.rs  mod.rs  noise.rs  noise_material.rs  outbox.rs  primary_supervisor.rs  protocol.rs  quic_fallback.rs  retry.rs  runtime.rs  self_check.rs  smoke_tests.rs  state_machine.rs  terminal_client.rs  terminal_exec.rs  transport.rs  types.rs
src/__tests__/: setup.ts
src/bindings/: tauri.ts
src/composables/: useAiAgentNetwork.ts  useAiAgentPlan.ts  useAiAgentRun.spec.ts  useAiAgentRun.ts  useAiAgentStream.spec.ts  useAiAgentStream.ts  useAiAssistant.spec.ts  useAiAssistant.ts  useAiDiffPreview.spec.ts  useAiDiffPreview.ts  useAiEditTimeline.spec.ts  useAiEditTimeline.ts  useAiRevert.spec.ts  useAiRevert.ts  useAiStream.spec.ts  useAiStream.ts  useAiSuggestionPool.spec.ts  useAiSuggestionPool.ts  useAiWebSources.spec.ts  useAiWebSources.ts  useBrowserContextMenu.ts  useDialog.ts  useDocumentLifecycle.ts  useDocumentPersistence.ts  useEditorContextMenu.ts  useIntegratedTerminal.ts  useMessage.spec.ts  useMessage.ts  useShellWorkbenchAiBridge.ts  useShellWorkbenchView.spec.ts  useShellWorkbenchView.ts  useShellWorkbenchViewportState.ts  useSidecarChangedDocumentRefresh.ts  useSourceControlActions.ts  useSourceControlContextMenu.ts  useTerminalRun.ts  useTheme.ts  useWindowResizeState.ts  useWorkbench.ts  useWorkbenchDocumentIO.ts  (+1 more)
src/constants/: ai-provider-icons.ts  ai-providers.ts  ai-runtime-tools.ts  ai-suggestions.ts  shell-command-catalog.ts  terminal.ts
src/copilotkit/: CopilotKitProvider.vue  event-adapter.ts  index.ts  sidecar-agent.ts
src/layouts/: AppShellLayout.vue
src/lib/: vueMarkdownDesign.ts
src/router/: README.md  index.ts
src/services/: ipc.ts  sessionStore.spec.ts  shell-command-catalog.ts  tauri.contracts.ts  tauri.spec.ts  tauri.ts
src/store/: ai.store.spec.ts  ai.ts  aiAgent.store.spec.ts  aiAgent.ts  aiConversation.perf.store.spec.ts  aiConversation.store.spec.ts  aiConversation.ts  aiEdit.store.spec.ts  aiEdit.ts  app.ts  editor.store.spec.ts  editor.ts  git.ts  index.ts  (+3 more)
(+682 files in other folders)
