[package]
name = "calamex"
version = "0.1.0"
description = "面向 Windows 的 Linux Shell 脚本编辑器"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.2.0"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
encoding_rs = "0.8.35"
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
globset = "0.4.18"
grep-matcher = "0.1.8"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
notify = "8.2.0"
nucleo-matcher = "0.3.1"
portable-pty = "0.9.0"
keyring = { version = "3.6.3", features = ["windows-native"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-store = "~2"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
tree-sitter = "0.26.8"
tree-sitter-bash = "0.25.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Hypervisor"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7.2", features = ["tonic014"] }
