[package]
name = "calamex"
version = "0.1.0"
description = "面向 Windows 的 Linux Shell 脚本编辑器"
edition = "2021"
build = "build.rs"
default-run = "calamex"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [], optional = true }
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.2.0"

[features]
default = ["desktop"]
desktop = [
  "dep:chrono",
  "dep:encoding_rs",
  "dep:git2",
  "dep:globset",
  "dep:grep-matcher",
  "dep:grep-regex",
  "dep:grep-searcher",
  "dep:hyper-util",
  "dep:ignore",
  "dep:keyring",
  "dep:notify",
  "dep:nucleo-matcher",
  "dep:portable-pty",
  "dep:reqwest",
  "dep:tauri",
  "dep:tauri-build",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-store",
  "dep:tracing",
  "dep:tree-sitter",
  "dep:tree-sitter-bash",
]
wsl-link-agent = ["dep:portable-pty"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"], optional = true }
encoding_rs = { version = "0.8.35", optional = true }
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"], optional = true }
globset = { version = "0.4.18", optional = true }
grep-matcher = { version = "0.1.8", optional = true }
grep-regex = { version = "0.1.14", optional = true }
grep-searcher = { version = "0.1.16", optional = true }
ignore = { version = "0.4.25", optional = true }
notify = { version = "8.2.0", optional = true }
nucleo-matcher = { version = "0.3.1", optional = true }
portable-pty = { version = "0.9.0", optional = true }
keyring = { version = "3.6.3", features = ["windows-native"], optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = ["tray-icon"], optional = true }
tauri-plugin-dialog = { version = "2.7.0", optional = true }
tauri-plugin-store = { version = "~2", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.5", features = ["transport"] }
hyper-util = { version = "0.1.20", features = ["tokio"], optional = true }
tonic-prost = "0.14.5"
prost = "0.14.3"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = { version = "0.1.44", optional = true }
tree-sitter = { version = "0.26.8", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
snow = "0.10.0"
getrandom = "0.3.4"
ssh2 = "0.9.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Hypervisor"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7.2", features = ["tonic014"] }
