[package]
name = "calamex"
version = "0.1.0"
description = "面向 Windows 的 Linux Shell 脚本编辑器"
edition = "2021"
build = "build.rs"
default-run = "calamex"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [], optional = true }
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.2.0"

[features]
default = ["desktop"]
desktop = [
  "dep:atomic-write-file",
  "dep:blake3",
  "dep:camino",
  "dep:cap-std",
  "dep:chrono",
  "dep:diffy-imara",
  "dep:encoding_rs",
  "dep:fjall",
  "dep:git2",
  "dep:globset",
  "dep:grep-matcher",
  "dep:grep-regex",
  "dep:grep-searcher",
  "dep:ast-grep-core",
  "dep:ast-grep-language",
  "dep:hyper-util",
  "dep:ignore",
  "dep:keyring",
  "dep:notify",
  "dep:normpath",
  "dep:nucleo-matcher",
  "dep:portable-pty",
  "dep:reqwest",
  "dep:regex",
  "dep:similar",
  "dep:tauri",
  "dep:tauri-build",
  "dep:tauri-plugin-dialog",
  "dep:tauri-plugin-store",
  "dep:tokenizers",
  "dep:tracing",
  "dep:tree-sitter",
  "dep:tree-sitter-bash",
]
wsl-link-agent = ["dep:portable-pty"]
tokenizers = ["dep:tokenizers"]

[dependencies]
async-openai = { version = "0.38.2", default-features = false, features = ["chat-completion-types", "chat-completion", "byot"] }
base64 = "0.22.1"
ast-grep-core = { version = "0.42.2", default-features = false, features = ["tree-sitter"], optional = true }
ast-grep-language = { version = "0.42.2", default-features = false, features = ["tree-sitter-bash"], optional = true }
chrono = { version = "0.4.44", features = ["serde"], optional = true }
diffy-imara = { version = "0.3.2", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"], optional = true }
globset = { version = "0.4.18", optional = true }
grep-matcher = { version = "0.1.8", optional = true }
grep-regex = { version = "0.1.14", optional = true }
grep-searcher = { version = "0.1.16", optional = true }
ignore = { version = "0.4.25", optional = true }
notify = { version = "8.2.0", optional = true }
nucleo-matcher = { version = "0.3.1", optional = true }
portable-pty = { version = "0.9.0", optional = true }
keyring = { version = "3.6.3", features = ["windows-native"], optional = true }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"], optional = true }
reqwest13 = { package = "reqwest", version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
regex = { version = "1.12.3", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
similar = { version = "3.1.0", optional = true }
tauri = { version = "2.10.3", features = ["tray-icon"], optional = true }
tauri-plugin-dialog = { version = "2.7.0", optional = true }
tauri-plugin-store = { version = "~2", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.14.5", features = ["transport"] }
hyper-util = { version = "0.1.20", features = ["tokio"], optional = true }
tonic-prost = "0.14.5"
prost = "0.14.3"
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = { version = "0.1.44", optional = true }
tree-sitter = { version = "0.26.8", optional = true }
tree-sitter-bash = { version = "0.25.1", optional = true }
snow = "0.10.0"
getrandom = "0.3.4"
ssh2 = "0.9.5"
tokenizers = { version = "0.23.1", default-features = false, features = ["onig"], optional = true }
blake3 = { version = "1.8.5", optional = true }
fjall = { version = "3.1.4", optional = true }
atomic-write-file = { version = "0.3.0", optional = true }
camino = { version = "1.2.2", optional = true }
cap-std = { version = "4.0.2", optional = true }
normpath = { version = "1.5.1", optional = true }
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["typescript"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_System_Hypervisor"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = { version = "0.7.2", features = ["tonic014"] }
